# snn-quasi-criticality

./: CriticalCortex_presentation_and_article_EN_PL.md  README.md  SPEC.md  calibrate.py  generate_fI_ref.py  generate_golden_master.py  pyproject.toml  validate_m3_criticality.py
benchmarks/: benchmark_speedup.py
criticalcortex/: __init__.py  avalanche_stats.py  connectome.py  criticality.py  numerics.py  reference_scatter.py  rust_driver.py  simulation.py  spatial_connectome.py
criticalcortex_kernel/: Cargo.toml
criticalcortex_kernel/src/: lib.rs
m3_avalanches/: balanced_g3.0_durs.npy  balanced_g3.0_sizes.npy  balanced_g4.0_durs.npy  balanced_g4.0_sizes.npy  g10.0_ON_durations.npy  g10.0_ON_sizes.npy  g12.0_ON_durations.npy  g12.0_ON_sizes.npy  g15.0_ON_durations.npy  g15.0_ON_sizes.npy  g18.0_ON_durations.npy  g18.0_ON_sizes.npy  g2.0_ON_durations.npy  g2.0_ON_sizes.npy  g20.0_ON_durations.npy  g20.0_ON_sizes.npy  g25.0_ON_durations.npy  g25.0_ON_sizes.npy  g3.0_ON_durations.npy  g3.0_ON_sizes.npy  g3.5_ON_durations.npy  g3.5_ON_sizes.npy  g4.5_ON_durations.npy  g4.5_ON_sizes.npy  g6.0_ON_durations.npy  g6.0_ON_sizes.npy  g6.5_ON_durations.npy  g6.5_ON_sizes.npy  g8.0_ON_durations.npy  g8.0_ON_sizes.npy
m5_viz/: README.md  protocol.py  requirements.txt  server.py  sim_engine.py
m5_viz/static/: app.js  index.html
reference/: golden_master.aer  izh_rs_fI.npz
tests/: test_avalanche_stats.py  test_m0_numerics.py  test_m1_reference.py  test_m2_ffi_linkage.py  test_m3_exact_raster.py  test_m3_soc.py  test_m4_long_horizon.py  test_soqc_gate.py  test_t0_determinism.py
